@@ -1,8 +1,8 @@
-// Copyright (C) 2006 Anders Logg.
+// Copyright (C) 2006-2008 Anders Logg.
 // Licensed under the GNU LGPL Version 2.1.
 //
 // First added:  2006-06-21
-// Last changed: 2006-10-16
+// Last changed: 2008-05-02
 
 #include <iostream>
 
@@ -23,6 +23,11 @@ BoundaryMesh::BoundaryMesh(Mesh& mesh) : Mesh()
   init(mesh);
 }
 //-----------------------------------------------------------------------------
+BoundaryMesh::BoundaryMesh(Mesh& mesh, MeshFunction<uint>& vertex_map)
+{
+  init(mesh, vertex_map);
+}
+//-----------------------------------------------------------------------------
 BoundaryMesh::BoundaryMesh(Mesh& mesh,
                            MeshFunction<uint>& vertex_map,
                            MeshFunction<uint>& cell_map) : Mesh()
@@ -38,6 +43,12 @@ BoundaryMesh::~BoundaryMesh()
 void BoundaryMesh::init(Mesh& mesh)
 {
   BoundaryComputation::computeBoundary(mesh, *this);
+}
+//-----------------------------------------------------------------------------
+void BoundaryMesh::init(Mesh& mesh,
+                        MeshFunction<uint>& vertex_map)
+{
+  BoundaryComputation::computeBoundary(mesh, *this, vertex_map);
 }
 //-----------------------------------------------------------------------------
 void BoundaryMesh::init(Mesh& mesh,
